5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1734_2508.log
== TEST (2019-05-07 20:51:50) 
-- CODE:
from math import*
x=pi-(pi**3/factorial(3))-(pi**5/factorial(5))-(pi**7/factorial(7))
print(round(x,10))
-- OUTPUT:
-5.1755486957
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:53:22) 
-- CODE:
from math import*
x=pi-(pi**3/factorial(3))-(pi**5/factorial(5))
print(round(x,10))
-- OUTPUT:
-4.5762841663
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:53:32) 
-- CODE:
from math import*
x=pi-(pi**3/factorial(3))+(pi**5/factorial(5))-(pi**7/factorial(7))
print(round(x,10))
-- OUTPUT:
-0.0752206159
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:57:17) 
-- CODE:
from math import*
x=radians(pi)
y=x-(x**3/factorial(3))+(x**5/factorial(5))-(x**7/factorial(7))
print(round(x,10))
-- OUTPUT:
0.0548311356
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:57:30) 
-- CODE:
from math import*
x=radians(pi)
y=x-(x**3/factorial(3))+(x**5/factorial(5))
print(round(x,10))
-- OUTPUT:
0.0548311356
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:58:45) 
-- CODE:
from math import*
x=radians(pi)
y=x-(x**3/factorial(3))+(x**5/factorial(5))-(x**7/factorial(7))
print(round(x,10))
-- OUTPUT:
0.0548311356
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:04:28) 
-- CODE:
from math import*
x=radians(pi)
y=x-(x**3/factorial(3))
print(round(x,10))
-- OUTPUT:
0.0548311356
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:04:35) 
-- CODE:
from math import*
y=x-(x**3/factorial(3))
print(round(x,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=x-(x**3/factorial(3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:04:49) 
-- CODE:
from math import*
x=pi-(pi**3/factorial(3))
print(round(x,10))
-- OUTPUT:
-2.0261201265
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:04:57) 
-- CODE:
from math import*
x=pi-(pi**3/factorial(3))
print(round(x,10))
-- OUTPUT:
-2.0261201265
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:31:16) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
while(j<x):
	g=3+((4/a*b*c)*d)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g=3+((4/a*b*c)*d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:31:28) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(j<x):
	g=3+((4/a*b*c)*d)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g=3+((4/a*b*c)*d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:31:43) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(j<x):
	g=3+((4/a*b*c)*d)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    g=3+((4/a*b*c)*d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:32:12) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(j<x):
	g=3+((4/a*b*c)*d)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(g,8))	
	
-- OUTPUT:
55.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:33:40) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(j<x):
	g=3+((4/a*b*c)*d)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(g,8))	
	
-- OUTPUT:
55.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:34:16) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(j<x):
	g=(4/a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(g,8))	
	
-- OUTPUT:
52.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:34:41) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(x>1):
	g=(4/a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(g,8))	
	
-- OUTPUT:
52.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:35:06) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(x>j):
	z=(4/a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(z,8))	
	
-- OUTPUT:
52.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:35:22) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(x>j):
	z=a*b*c
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(z,8))	
	
-- OUTPUT:
1320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:35:57) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
while(x>j):
	z=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(z,8))	
	
-- OUTPUT:
0.0030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:37:04) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
while(x>j):
	z=z+4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
print(round(z,8))	
	
-- OUTPUT:
0.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:37:24) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
while(x>j):
	z=z+4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:39:57) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
if(x==1):
    z=3
else:
	while(j<x):
	   z=z+4/(a*b*c)
	   a=a+2
	   b=b+2
	   c=c+2
	   j=j+1
	   d=-d
print(round(z,8))	
	
-- OUTPUT:
0.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:40:03) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
if(x==1):
    z=3
else:
	while(j<x):
	   z=z+4/(a*b*c)
	   a=a+2
	   b=b+2
	   c=c+2
	   j=j+1
	   d=-d
print(round(z,8))	
	
-- OUTPUT:
0.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:41:57) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
while(x>j):
	z=z+g
	g=4(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    z=z+g
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:42:03) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
while(x>j):
	z=z+g
	g=4(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    z=z+g
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:42:17) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z+g
	g=4(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g=4(a*b*c)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:42:35) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z+g
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:42:47) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z+g
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:42:55) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z+g
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:01:38) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z+g
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:02:15) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z-(g*d)
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:02:29) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z-(g*d)
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:02:36) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z-(g*d)
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 00:02:44) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z-(g*d)
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- EXECUTION TIME:
0.196683
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 10:30:02) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
a=2
b=3
c=4
d=1
z=0
g=0
while(x>j):
	z=z-(g*d)
	g=4/(a*b*c)
	a=a+2
	b=b+2
	c=c+2
	j=j+1
	d=-d
z=3+z	
print(round(z,8))	
	
-- EXECUTION TIME:
0.120041
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
